# normtime

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
locales/de-DE/: main.ftl
locales/en-US/: main.ftl
src/: duration.rs  lib.rs  time.rs
