[package]
name = "normtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = ["dep:serde"]
tex = []

[dependencies]
chrono = { version = "0.4.34", default-features = false, features = ["std"] }
serde = { version = "1.0.195", features = ["derive"], optional = true }
thiserror = "1.0.57"

[dev-dependencies]
serde_test = "1.0.176"
