[package]
name = "normtime"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
i18n = ["dep:fluent-templates", "dep:unic-langid"]
serde = ["dep:serde"]
tex = []

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["std"] }
fluent-templates = { version = "0.9.4", optional = true }
serde = { version = "1.0.195", features = ["derive"], optional = true }
thiserror = "1.0.57"
unic-langid = { version = "0.9.5", optional = true }

[dev-dependencies]
serde_test = "1.0.176"
