[package]
name = "normtime"
version = "0.5.0"
edition = "2024"
authors = ["Victor von Rhein"]
description = "Tracking time as 'Normtime'. Normtime aspires to represent time in a 'metric' way. A 'Normday' has a duration of exact 100'000 seconds (27 h, 46 min, 40 s), and is therefore a couple of hours longer than a standard day with 24 hours, but is roughly equivalent."
readme = "README.md"
repository = "https://github.com/Kamduis/normtime"
license = "MIT OR Apache-2.0"
keywords = ["date", "time"]
categories = ["date-and-time"]

[features]
i18n = ["dep:fluent-templates", "dep:unic-langid"]
serde = ["dep:serde"]
tex = []

[dependencies]
chrono = { version = "0.4.38", default-features = false, features = ["std"] }
fluent-templates = { version = "0.9.4", optional = true }
serde = { version = "1.0.195", features = ["derive"], optional = true }
thiserror = "2.0.6"
unic-langid = { version = "0.9.5", optional = true }

[dev-dependencies]
serde_test = "1.0.176"
